# jiri

./: .env.example  .gitignore  CHAT_OPTIONS.md  DEDALUS_FILE_STRUCTURE.md  DEDALUS_QUICKSTART.md  DEDALUS_README.md  DEDALUS_SETUP_COMPLETE.md  Dockerfile  QUICKSTART.md  README.md  ask.py  chat.py  chat_simple.py  dedalus.py  dedalus_demo.py  docker-compose.yml  example_usage.py  mcp_server.py  mcp_server_dedalus.py  pyproject.toml  setup_dedalus.sh  test_curl.sh  test_handoff.sh  uber_mcp.py
Dedalus/: .dockerignore  .gitignore  README.md
Dedalus/MCP/: web_server.py
Dedalus/MCP/router/: __init__.py  registry.py
Dedalus/MCP/static/: index.html
Dedalus/alembic/: env.py
Dedalus/ios/JiriClient/JiriClient/: JiriClientApp.swift
Dedalus/ios/JiriClient/JiriClient.xcodeproj/: project.pbxproj
Dedalus/ios/JiriClient/JiriClient.xcodeproj/xcuserdata/rithv.xcuserdatad/xcschemes/: xcschememanagement.plist
Dedalus/src/: __init__.py
Dedalus/src/api/: main.py
Dedalus/src/jiri/: main.py  schemas.py
Dedalus/src/jiri/core/: config.py  database.py  logging.py  security.py
Dedalus/src/jiri/core/models/: __init__.py
Dedalus/src/jiri/models/: __init__.py  interaction_log.py
Dedalus/src/jiri/orchestrator/: handoff_decision.py
Dedalus/src/jiri/routers/: health.py  session.py  voice_chat.py
Dedalus/src/jiri/voice/: __init__.py  mcp_servers.json  tools.py
Jiri/Jiri/: ContentView.swift  Item.swift  JiriApp.swift
Jiri_xcode/Jiri.xcodeproj/: project.pbxproj
Jiri_xcode/Jiri.xcodeproj/project.xcworkspace/xcuserdata/nihal.xcuserdatad/: UserInterfaceState.xcuserstate
Jiri_xcode/Jiri.xcodeproj/xcuserdata/nihal.xcuserdatad/xcschemes/: xcschememanagement.plist
Jiri_xcode/JiriTests/: JiriTests.swift
Jiri_xcode/JiriUITests/: JiriUITests.swift  JiriUITestsLaunchTests.swift
LangChain/: .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  package-lock.json  pyproject.toml  run.sh
LangChain/MCP/: server.js  web_server.py
LangChain/MCP/router/: config.py  core.py  registry.py
LangChain/MCP/servers/: news_server.py
LangChain/MCP/static/: index.html
LangChain/ios/JiriClient/JiriClient/: ContentView.swift
LangChain/ios/JiriClient/JiriClient.xcodeproj/project.xcworkspace/xcuserdata/rithv.xcuserdatad/: UserInterfaceState.xcuserstate
LangChain/src/api/: __init__.py  models.py  turn.py
LangChain/src/jiri/core/: mcp_discovery.py  mcp_registry.py  skills.py
LangChain/src/jiri/orchestrator/: agent.py
LangChain/src/jiri/routers/: turn.py  voice_turn.py
MCP/: WEB_UI_README.md  dedalus.py
MCP/data/: usage_metrics.jsonl
MCP/router/: config.py  core.py  health.py  history.py  metrics.py  tool_cache.py
agent_docs/: AGENTS.md  CODE_PATTERNS.md  PRD.md  TECH_DESIGN.md  TECH_STACK.md
apps/agent-runtime/: .env.example  AGENTS.md  README.md  agentuity.json  package.json
apps/agent-runtime/src/api/jiri/: route.ts
apps/web/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/public/demo/: demo_run.jsonl
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/components/command-center/: artifacts-strip.tsx  command-center-shell.tsx  floating-module.tsx  jarvis-orb.tsx  logo-jiri.tsx  marketplace-sheet.tsx  plan-card.tsx  state-rail.tsx  tech-lines.tsx  top-status-bar.tsx  trace-panel.tsx  voice-panel.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
apps/web/src/hooks/: use-command-center-connection.ts  useFocusMode.ts
apps/web/src/lib/: event-contract.ts  replay.ts  utils.ts  ws-client.ts
apps/web/src/store/: command-center-store.ts
data/: usage_metrics.jsonl
docs/: PLAN-jarvis-central-redesign.md  PLAN-layout-fix.md  PLAN-siri-handoff.md  agentuity_bridge_runbook.md  frontend_plan.md  shortcut_contract.md
infra/timescale/: init.sql
ios-starter/: INSTRUCTIONS.md  JiriApp.swift  JiriConversationIntent.swift  README.md
ios/JiriClient/JiriClient/: AskJiriIntent.swift  Info.plist  JiriAPI.swift  VoiceManager.swift
plans/: PLAN-backend-infra.md  PLAN-jiri-mvp.md  PLAN-model-improvement.md  PLAN-voice-mcp-pipeline.md
src/api/: __init__.py  main.py  models.py  turn.py
src/jiri/: __init__.py  main.py
src/jiri/core/: redis_client.py
src/jiri/core/models/: mcp.py
src/jiri/models/: base.py
src/jiri/orchestrator/: fallback.py
src/jiri/orchestrator/orchestrator/: __init__.py
src/jiri/routers/: voice_turn.py  voice_ws.py
src/jiri/voice/: voice_agent.py
src/orchestrator/: __init__.py  agent.py
src/session/: __init__.py  models.py  store.py
tests/: conftest.py  test_health.py  test_session.py  test_turn.py
